# SofaCUDALinearSolver

./: CMakeLists.txt
example/: FEMBAR_CUDASparseCholeskySolverCUDSS.scn
src/SofaCUDALinearSolver/: CUDACholeksySparseSolver.cpp  CUDACholeksySparseSolver.h  CUDACholeksySparseSolver.inl  CUDASparseCholeskySolverCUDSS.cpp  CUDASparseCholeskySolverCUDSS.h  CUDASparseCholeskySolverCUDSS.inl  config.h.in
